Auth/manifests/authdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: romeo7/trim_auth:v1
          ports:
          - containerPort: 5000
