Auth/manifests/authingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  labels:
    name: auth-ingress
spec:
  rules:
  - host: tri.me
    http:
      paths:
      - pathType: Prefix
        path: "/login"
        backend:
          service:
            name: auth
            port: 
              number: 5000
      - pathType: Prefix
        path: "/signup"
        backend:
          service:
            name: auth
            port: 
              number: 5000
